--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,93 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.card-custom {
+  background: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
+  padding: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.purple-icon {
+  color:#cfa4df;
+  background-color: #a90fd8;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  box-shadow:  0px 8px 20px rgba(165, 95, 156, 0.158);
+  
+}
+
+.info-box {
+  background: #ffffff;
+  border-radius: 10px;
+  padding: 5px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
+}
+
+.info-box .text-muted {
+  font-size: 0.95rem;
+  margin: 0;
+}
+
+.info-box strong {
+  font-size: 0.8rem;
+  margin-top: 4px;
+  display: block;
+}
+
+.purple-icon-2 {
+  color: #874c9c;
+  background-color: rgb(192, 151, 192);
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  box-shadow:  0px 8px 20px rgba(165, 95, 156, 0.158);
+  
+}
+
+.purple-icon-3 {
+  color: #ffffff;
+  background-color:  #a90fd8;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  box-shadow:  0px 8px 20px rgba(165, 95, 156, 0.158);
+  
+}
+
+.text-purple {
+  color: #a90fd8;
+  
+  
+}
+.form-control.custom-underline {
+  border: none;
+  border-bottom: 2px solid  #a90fd8;
+  border-radius: 0;
+}
+
+.form-control.custom-underline::placeholder {
+  color: #a90fd8
+
+
+}
+
+
+
+
